import mongoose from 'mongoose';
import { toJsonIdPlugin, softDeletePlugin } from '../lib/mongoosePlugins.js';
import { examScoresSubSchema, examIntegritySubSchema } from './sub/examAttemptSubSchemas.js';

const examAttemptSchema = new mongoose.Schema(
  {
    assignmentId: { type: mongoose.Schema.Types.ObjectId, ref: 'ExamAssignment', required: true, index: true },
    sessionId: { type: mongoose.Schema.Types.ObjectId, ref: 'ExamSession', default: null, index: true },
    userId: { type: mongoose.Schema.Types.ObjectId, ref: 'User', required: true, index: true },
  /** Resolved at runtime from ExamAssignment.examSnapshot (D4 contract — not stored per attempt). */
    examSnapshot: { type: mongoose.Schema.Types.Mixed, default: null },
    status: { type: String, enum: ['in_progress', 'submitted', 'expired', 'void'], default: 'in_progress' },
    startedAt: { type: Date, default: Date.now },
    submittedAt: { type: Date, default: null },
    attemptDeadlineAt: { type: Date, default: null },
    meta: { type: mongoose.Schema.Types.Mixed, default: () => ({}) },
    answers: { type: mongoose.Schema.Types.Mixed, default: () => ({}) },
    gradingState: {
      type: String,
      enum: ['pending_auto', 'pending_ai', 'pending_manual', 'finalized'],
      default: 'pending_auto',
    },
    scores: { type: examScoresSubSchema, default: () => ({}) },
    resultsReleased: { type: Boolean, default: false },
    integrity: { type: examIntegritySubSchema, default: () => ({}) },
  },
  { timestamps: true }
);

examAttemptSchema.index({ assignmentId: 1, userId: 1, status: 1 });
// P0-B3: compound indexes for gradebook/grading hub queries (see doc 21 §3C).
examAttemptSchema.index({ assignmentId: 1, status: 1 });
examAttemptSchema.index({ assignmentId: 1, submittedAt: -1 });
examAttemptSchema.index({ sessionId: 1, status: 1 });
examAttemptSchema.index({ sessionId: 1, userId: 1, status: 1 });
examAttemptSchema.index({ status: 1, attemptDeadlineAt: 1 });
examAttemptSchema.index({ userId: 1, status: 1 });
examAttemptSchema.index({ status: 1, gradingState: 1, resultsReleased: 1 });

toJsonIdPlugin(examAttemptSchema);
softDeletePlugin(examAttemptSchema, { useDestroyFlag: true });

examAttemptSchema.set('toJSON', {
  transform: (doc, ret) => {
    ret.id = ret._id.toString();
    delete ret._id;
    delete ret.__v;
    return ret;
  },
});

const ExamAttempt = mongoose.model('ExamAttempt', examAttemptSchema);
export default ExamAttempt;
